<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OneGameInfo">

    <TextView
        android:id="@+id/statTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/szczeg_y_gry"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="15sp"
            android:paddingEnd="15sp">

            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10sp"
                android:text="@string/id"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tytul"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tytu"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/rok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10sp"
                android:text="@string/rok"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/ranga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/pozycja"
                android:textAlignment="center"
                android:textSize="17sp" />

        </TableRow>

    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="bigPhotoCover"
                android:paddingVertical="20dp"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/addPhotoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="zrobZdjecie"
                android:text="@string/dodaj_zdj_cie" />

            <LinearLayout
                android:id="@+id/zdjecia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ToggleButton
                    android:id="@+id/togglePhotoDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/usu_zdj_cie"
                    android:textOff="@string/usuwanie_zdj_wy_czone"
                    android:textOn="@string/usuwanie_zdj_w_czone" />
            </LinearLayout>

            <View
                android:id="@+id/wykres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>